shared/lightwave/src/lwo2.h

void lwListInsert( void **vlist, void *vitem,
   int ( *compare )( void *, void * ));
void normalize( float v[] );
/* lwio.c */

void  set_flen( int i );
int   get_flen( void );
void *getbytes( FILE *fp, int size );
void  skipbytes( FILE *fp, int n );
int   getI1( FILE *fp );
short getI2( FILE *fp );
int   getI4( FILE *fp );
unsigned char  getU1( FILE *fp );
unsigned short getU2( FILE *fp );
unsigned int   getU4( FILE *fp );
int   getVX( FILE *fp );
float getF4( FILE *fp );
char *getS0( FILE *fp );
int   sgetI1( unsigned char **bp );
short sgetI2( unsigned char **bp );
int   sgetI4( unsigned char **bp );
unsigned char  sgetU1( unsigned char **bp );
unsigned short sgetU2( unsigned char **bp );
unsigned int   sgetU4( unsigned char **bp );
int   sgetVX( unsigned char **bp );
float sgetF4( unsigned char **bp );
char *sgetS0( unsigned char **bp );