shared/lightwave/lwobject.odin


	@(link_name = "normalize")
	normalize :: proc(v: ^_c.float) ---

	@(link_name = "set_flen")
	set_flen :: proc(i: _c.int) ---

	@(link_name = "get_flen")
	get_flen :: proc() -> _c.int ---

	@(link_name = "getbytes")
	getbytes :: proc(fp: ^FILE, size: _c.int) -> rawptr ---

	@(link_name = "skipbytes")
	skipbytes :: proc(fp: ^FILE, n: _c.int) ---

	@(link_name = "getI1")
	getI1 :: proc(fp: ^FILE) -> _c.int ---

	@(link_name = "getI2")
	getI2 :: proc(fp: ^FILE) -> _c.short ---

	@(link_name = "getI4")
	getI4 :: proc(fp: ^FILE) -> _c.int ---

	@(link_name = "getU1")
	getU1 :: proc(fp: ^FILE) -> _c.uchar ---

	@(link_name = "getU2")
	getU2 :: proc(fp: ^FILE) -> _c.ushort ---

	@(link_name = "getU4")
	getU4 :: proc(fp: ^FILE) -> _c.uint ---

	@(link_name = "getVX")
	getVX :: proc(fp: ^FILE) -> _c.int ---

	@(link_name = "getF4")
	getF4 :: proc(fp: ^FILE) -> _c.float ---

	@(link_name = "getS0")
	getS0 :: proc(fp: ^FILE) -> cstring ---

	@(link_name = "sgetI1")
	sgetI1 :: proc(bp: ^^_c.uchar) -> _c.int ---

	@(link_name = "sgetI2")
	sgetI2 :: proc(bp: ^^_c.uchar) -> _c.short ---

	@(link_name = "sgetI4")
	sgetI4 :: proc(bp: ^^_c.uchar) -> _c.int ---

	@(link_name = "sgetU1")
	sgetU1 :: proc(bp: ^^_c.uchar) -> _c.uchar ---

	@(link_name = "sgetU2")
	sgetU2 :: proc(bp: ^^_c.uchar) -> _c.ushort ---

	@(link_name = "sgetU4")
	sgetU4 :: proc(bp: ^^_c.uchar) -> _c.uint ---

	@(link_name = "sgetVX")
	sgetVX :: proc(bp: ^^_c.uchar) -> _c.int ---

	@(link_name = "sgetF4")
	sgetF4 :: proc(bp: ^^_c.uchar) -> _c.float ---

	@(link_name = "sgetS0")
	sgetS0 :: proc(bp: ^^_c.uchar) -> cstring ---

}
